--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         <activity android:name=".screen.main.MainActivity">
 
         </activity>
-        <activity android:name=".screen.login.LoginActivity">
+        <activity android:name=".screen.login.Activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
